--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-	"name": "wurfl/wurfl-php-api",
+	"name": "ricardoh/wurfl-php-api",
 	"license": "GNU AFFERO GENERAL PUBLIC LICENSE",
     "description": "WURFL, the Wireless Universal Resource FiLe, is a Device Description Repository (DDR), i.e. a software component that maps HTTP Request headers to the profile of the HTTP client (Desktop, Mobile Device, Tablet, etc.) that issued the request",
     "authors": [
