--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,10 @@
             "name": "ScientiaMobile, Inc",
             "email": "sales@scientiamobile.com",
             "homepage": "http://wurfl.sourceforge.net/"
+        },
+        {
+            "name": "Ricardo Walter Hildebrand",
+            "email": "ricardo.walter@gmail.com"
         }
     ],
 	"require": {
@@ -15,6 +19,11 @@
 	"autoload": {
         "psr-0": {
             "WURFL_": "./"
+        }
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.5.1"
         }
     }
 }
