--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "1.5.1"
+            "dev-master": "1.5.1-dev"
         }
     }
 }
